# shmeppy-metrics

./: .gitignore  Makefile  README.md
src/: process-logs.sh
src/build-convocations-aggregate/src/: build-cache-for-day.sh  cache-convocations-for-day.sh  main.py  skip-bytes-and-get-range.sh
src/fast-convoker/: Cargo.toml
src/fast-convoker/src/: accumulator.rs  activeusers.rs  activity.rs  convoker.rs  globalpresence.rs  lex.rs  main.rs  parse.rs  presence.rs  request.rs  timespan.rs
src/fast-log-utils/: Cargo.toml  build-registrations.sh
src/fast-log-utils/src/: count_events.rs  count_registrations.rs  extract_date.rs  filter_bad_versions.rs  get_logs_within.rs  get_range.rs
src/get-convocations-within/: get-convocations-within.sh  package-lock.json  package.json  test.sh
src/get-convocations-within/src/: index.js
src/get-convocations-within/src/convocation/: TimeSpan.js  TimeSpan.unitTest.js  UserPresence.js  UserPresence.unitTest.js  _getActiveTimespans.js  _getActiveTimespans.unitTest.js  _groupOverlappingPresences.js  _groupOverlappingPresences.unitTest.js  _joinContiguousGroups.js  _joinContiguousGroups.unitTest.js  getConvocations.js  getConvocations.unitTest.js  getUserDurations.js  getUserDurations.unitTest.js
src/get-convocations-within/src/parse/: GameRequest.js  GameRequest.unitTest.js  LogRecord.js  LogRecord.unitTest.js  _collectData.js  _collectData.unitTest.js  extractGameRequests.js  extractGameRequests.unitTest.js
src/get-logs-within/: Cargo.toml
src/get-logs-within/src/: main.rs
src/metrics-frontend/: index.htm  index.js
(+2 files in other folders)
