[package]
name = "fast-log-utils"
version = "0.1.0"
authors = ["brownhead <johnsullivan.pem@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3.0"

[[bin]]
name = "get-logs-within"
path = "src/get_logs_within.rs"

[[bin]]
name = "get-range"
path = "src/get_range.rs"
