[package]
name = "fast-log-utils"
version = "0.1.0"
authors = ["John Sullivan <john@shmeppy.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memchr = "2.3.0"
memmem = "0.1.1"
serde = "1.0"
serde_json = "1.0"

[[bin]]
name = "count-registrations"
path = "src/count_registrations.rs"

[[bin]]
name = "count-events"
path = "src/count_events.rs"
